--- a/complete.html
+++ b/complete.html
@@ -41,7 +41,12 @@
             </div>
             <div class="header_bottom"></div>
 
+<div>
+   <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto in enim illo necessitatibus quia, repudiandae voluptatem dignissimos aliquam sit unde corrupti omnis non ipsa. Ipsa commodi esse soluta possimus ut?
+   </p>
 
+</div>
 
         </div>
     
