--- a/complete.html
+++ b/complete.html
@@ -41,6 +41,11 @@
             </div>
             <div class="header_bottom"></div>
 
+            <div class="button">
+
+                <button type="reset">Delete</button>
+            </div>
+
 <div>
    <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto in enim illo necessitatibus quia, repudiandae voluptatem dignissimos aliquam sit unde corrupti omnis non ipsa. Ipsa commodi esse soluta possimus ut?
