--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,17 @@
 <body>
   <app-root></app-root>
   <p>hllo ji </p>
+
+  <div class="container">
+
+<form>
+
+<input type="text" placeholder="Enter Name" value="required">
+<input type="password" placeholder="">
+<button type="submit">Submit</button>
+
+</form>
+
+  </div>
 </body>
 </html>
