--- a/arreyAllMethod.html
+++ b/arreyAllMethod.html
@@ -83,6 +83,8 @@ console.log(date);
     <h2>Paragraph</h2>
     <div class="card">
 
+        <h4>Sunil singh rathore</h4>
+
     </div>
 </body>
 </html>
