--- a/complete.html
+++ b/complete.html
@@ -28,6 +28,7 @@
 
             <div class="tel">
                 <a href="tel:+919805284764">+91 98052 84764</a>
+                <button type="button" class="btn btn-dark">Dark</button>
 
             </div>
 
