--- a/complete.html
+++ b/complete.html
@@ -40,6 +40,12 @@
                     <a href="https://www.instagram.com/enfieldpointmanali/" class="a instagram"><i class="fa fa-instagram"></i></a>
                     <a href="https://enfieldpoint.com/accounts/login/" class="a user"><i class="fa fa-user"></i></a>
                     </div>
+                    <form>
+                        <div class="form-group">
+                          <label for="exampleFormControlFile1">Example file input</label>
+                          <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                        </div>
+                      </form>
 
             </div>
             <div class="header_bottom"></div>
