--- a/arreyAllMethod.html
+++ b/arreyAllMethod.html
@@ -9,6 +9,8 @@
 <body>
 
     <script>
+
+<p> hello all</p>
 //1 tostring
 // var a = ["Sunil","kuldeep","shakti","sandeep","virendra"];
 
@@ -28,7 +30,7 @@
 // var a = [ "Sunil","kuldeep","shakti","sandeep","virendra" ];
 
 //  var c = a.push("Rathore");
- 
+
 //  console.log(a);
 
 
