--- a/download.htm
+++ b/download.htm
@@ -16,7 +16,7 @@
                 <!--this is header div   -->
                 <!-- logo img-->
           <div>  <img style=" margin-top:2%; " src="logo.jpg" alt="" width="8%" height="8%" > </div>
-                 <!-- home con and etc  -->
+                 <!-- home con and  -->
                  <div style=" clear:left">
                      <span style="float:right ; clear: left;  padding-bottom: 2%;"> Home Fixed Departure Services Bike Rental Blog Contact Us  <i class="fa-sharp fa-solid fa-magnifying-glass"></i>  </span>
                  </div>
