--- a/button.html
+++ b/button.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="button.css">
 </head>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, facere corrupti ipsa tempora ipsum vel optio sequi adipisci explicabo non laudantium cupiditate deserunt neque amet sint, officia id mollitia rerum.
-tempora ipsum vel optio sequi adipisci explicabo non laudantium cupiditate deserunt neque amet sint, officia id mollitia rerum.
+tempora ipsum vel optio sequi adipisci explica
 
     <body>
 
