--- a/button.html
+++ b/button.html
@@ -27,6 +27,8 @@ tempora ipsum vel optio sequi adipisci explica
     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
       <a class="dropdown-item" href="#">Action</a>
       <a class="dropdown-item" href="#">Another action</a>
+      <a class="dropdown-item" href="#">Super Action</a>
+      <a class="dropdown-item" href="#">Action+</a>
       <a class="dropdown-item" href="#">Something else here</a>
     </div>
   </div>
