--- a/button.html
+++ b/button.html
@@ -35,7 +35,11 @@ tempora ipsum vel optio sequi adipisci explica
 </div>
 
     <div input class="btn" type="button" name="submit">
-    </div>
+       </div>
+       <div input class="btn" type="button" name="save">
+      </div>
+      <div input class="btn" type="button" name="Add">
+      </div>
     <div input class="btn" type="button" name="sign in"></div>
     <button type="button" type="SUBMIT"></button>
 </body>
