--- a/download.htm
+++ b/download.htm
@@ -54,6 +54,7 @@
         <DIV class="three "  >
         <p>POPULARLY </p>
        <h1> Most Popular <br>
+        
         Dream Bike Trip Destinations </h1>
 
         <!--div button and next  -->
@@ -63,7 +64,7 @@
          <!-- images here -->
          <div class="no1" >
 
-     <div class="no3">  <h2> LEH TO LEH BIKE TRIP | Starting from <br> &#8377;10,000/- per person</h2>  </div>
+     <div class="no3">  <h2> LEH TO LEH BIKE TRIP | Starting from @@@@@<br> &#8377;10,000/- per person</h2>  </div>
       <div class="no3">   <h2> MANALI LEH MANALI | | Starting from <br> &#8377;20,000/- per person</h2>   </div>
          </div>
 
