--- a/download.htm
+++ b/download.htm
@@ -65,7 +65,7 @@
          <div class="no1" >
 
      <div class="no3">  <h2> LEH TO LEH BIKE TRIP | Starting from @@@@@<br> &#8377;10,000/- per person</h2>  </div>
-      <div class="no3">   <h2> MANALI LEH MANALI | | Starting from <br> &#8377;20,000/- per person</h2>   </div>
+      <div class="no3">   <h2> MANALI LEH MANALI | | Starting from @@@@ <br> &#8377;20,000/- per person</h2>   </div>
          </div>
 
 
