--- a/download.htm
+++ b/download.htm
@@ -21,6 +21,7 @@
                      <span style="float:right ; clear: left;  padding-bottom: 2%;"> Home Fixed Departure Services Bike Rental Blog Contact Us  <i class="fa-sharp fa-solid fa-magnifying-glass"></i>  </span>
                  </div>
 
+              
 <hr style="clear:right ;">
 
 
@@ -55,7 +56,7 @@
         <p>POPULARLY </p>
        <h1> Most Popular <br>
         
-        Dream Bike Trip Destinations </h1>
+        Dream Bike Trip Destinations juuhwrfh </h1>
 
         <!--div button and next  -->
 
