--- a/complete.html
+++ b/complete.html
@@ -19,12 +19,12 @@
 <div class="header">
     <p>hello everyone</p>
     <div class="topper">
-        <p>hi everybody</p>
+        <p>hi  hello everybody</p>
 
     <div class="warp">
 
 <p> add pragraph add.. 
-<p> </p> add para</p>
+<p> 2nd para </p> add para</p>
 
 <p> add pragraph add</p>
 
