--- a/button.html
+++ b/button.html
@@ -27,7 +27,7 @@ tempora ipsum vel optio sequi adipisci explica
 
     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
       <a class="dropdown-item" href="#">Action</a>
-      <a class="dropdown-item" href="#">Another action</a>
+      <a class="dropdown-item" href="#">Another Action</a>
       <a class="dropdown-item" href="#">Super Action</a>
       <a class="dropdown-item" href="#">Action+</a>
       <a class="dropdown-item" href="#">Something else here</a>
