--- a/button.html
+++ b/button.html
@@ -41,6 +41,8 @@ tempora ipsum vel optio sequi adipisci explica
       </div>
       <div input class="btn" type="button" name="Add">
       </div>
+<div input class="btn" type="button" name="Add">
+      </div>
     <div input class="btn" type="button" name="sign in"></div>
     <button type="button" type="SUBMIT"></button>
 <p> </P>
